--- a/src/css/board.css
+++ b/src/css/board.css
@@ -1,7 +1,13 @@
 .board {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: 300px; /* Largeur totale du tableau */
     margin: auto; /* Centrer le tableau horizontalement */
     margin-top: 30px;
+}
+.historyMoveList {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
